--- a/src/app/shared/footer/footer.component.scss
+++ b/src/app/shared/footer/footer.component.scss
@@ -1,7 +1,11 @@
+:host {
+  display: block;
+}
+
 .footer {
   position: relative;
   padding: 40px 0 0;
-  overflow: visible;
+  overflow: hidden;
 }
 
 .footer-bg {
